kubernetes/staging/k8s-ingress.yaml
###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saludtechalpes-data-transformation-service-ingress
  labels:
    name:  saludtechalpes-data-transformation-service-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: saludtechalpes-data-transformation-service
            port: 
              number: 5002
      - pathType: Prefix
        path: /
        backend:
          service:
            name: saludtechalpes-data-transformation-service
            port: 
              number: 5002
